--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "konva": "^10.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-konva": "^19.2.0"
+    "react-icons": "^5.5.0",
+    "react-konva": "^19.2.0",
+    "react-zoom-pan-pinch": "^3.7.0"
   },
   "devDependencies": {
     "@html-eslint/eslint-plugin": "^0.48.0",
