--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-konva": "^19.2.0",
+    "react-use": "^17.6.0",
     "react-zoom-pan-pinch": "^3.7.0"
   },
   "devDependencies": {
