--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-konva": "^19.2.0",
     "react-use": "^17.6.0",
+    "react-window-size-listener": "^2.1.0",
     "react-zoom-pan-pinch": "^3.7.0"
   },
   "devDependencies": {
